kubernetes/apps/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: web
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: ghcr.io/mauricevanlavieren/project02-demo:60e7b03e97be930d3e0618a3d0b461bae928bdab
        ports:
        - containerPort: 80
