kubernetes/apps/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: web
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30008
